<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#007600"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/HomePageTitle"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/profile1"
            android:padding="8dp"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="85dp" />

        <ImageView
            android:id="@+id/SeaWolf_Image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/index" />

        <Button
            android:id="@+id/ScanButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SeaWolf_Image"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="32dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="#009d00"
            android:text="@string/scanButtonText"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="gotoQRScanner"/>

        <Button
            android:id="@+id/AddAllergensButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ScanButton"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="32dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="#009d00"
            android:text="Add Allergies"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="addAllergiesClick"/>

        <Button
            android:id="@+id/CampusDiningButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AddAllergensButton"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="32dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="#009d00"
            android:text="@string/campus_dining_Button"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/supportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CampusDiningButton"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="32dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="#009d00"
            android:text="@string/supportButton"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/emergencyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/supportButton"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="32dp"
            android:background="#009d00 "
            android:text="@string/Emergency_Call_Button"
            android:onClick="onClickEmergencyCall"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emergencyButton"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="32dp"
            android:background="@color/common_google_signin_btn_text_light_default"
            android:text="Logout"
            android:onClick="onClickLogout"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailHomePage"
            android:text="email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoutButton"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="32dp"
            />

    </RelativeLayout>
</ScrollView>